@@ -1,50 +1,5 @@
 package uk.gov.hmcts.reform.civil.ga.handler.callback.camunda.businessprocess;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.civil.callback.CallbackParams;
-import uk.gov.hmcts.reform.civil.enums.YesOrNo;
-import uk.gov.hmcts.reform.civil.enums.dq.GAHearingDuration;
-import uk.gov.hmcts.reform.civil.enums.dq.GAHearingType;
-import uk.gov.hmcts.reform.civil.ga.enums.dq.GAJudgeDecisionOption;
-import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandlerTest;
-import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
-import uk.gov.hmcts.reform.civil.helpers.CaseDetailsConverter;
-import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
-import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
-import uk.gov.hmcts.reform.civil.model.Fee;
-import uk.gov.hmcts.reform.civil.model.GeneralAppParentCaseLink;
-import uk.gov.hmcts.reform.civil.model.common.DynamicList;
-import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAApplicationType;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAHearingDetails;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAInformOtherParty;
-import uk.gov.hmcts.reform.civil.ga.model.genapplication.GAJudicialDecision;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAPbaDetails;
-import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentOrderAgreement;
-import uk.gov.hmcts.reform.civil.model.genapplication.GASolicitorDetailsGAspec;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAStatementOfTruth;
-import uk.gov.hmcts.reform.civil.model.genapplication.GAUrgencyRequirement;
-import uk.gov.hmcts.reform.civil.model.genapplication.GeneralApplication;
-import uk.gov.hmcts.reform.civil.sampledata.PDFBuilder;
-import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
-import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
-import uk.gov.hmcts.reform.civil.service.Time;
-import uk.gov.hmcts.reform.civil.ga.service.docmosis.GeneralApplicationDraftGenerator;
-import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
-
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.UUID;
-
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
@@ -53,6 +8,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
+
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.ABOUT_TO_SUBMIT;
 import static uk.gov.hmcts.reform.civil.callback.CallbackType.SUBMITTED;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.CHANGE_STATE_TO_AWAITING_JUDICIAL_DECISION;
@@ -63,34 +19,61 @@ import static uk.gov.hmcts.reform.civil.enums.dq.GeneralApplicationTypes.RELIEF_
 import static uk.gov.hmcts.reform.civil.sampledata.CaseDataBuilder.CUSTOMER_REFERENCE;
 import static uk.gov.hmcts.reform.civil.utils.ElementUtils.wrapElements;
 
-@ExtendWith(SpringExtension.class)
-@SpringBootTest(classes = {
-    MoveToJudicialDecisionStateEventCallbackHandler.class,
-    CaseDetailsConverter.class,
-    JacksonAutoConfiguration.class,
-    AssignCategoryId.class
-})
-class MoveToJudicialDecisionStateEventCallbackHandlerTest extends GeneralApplicationBaseCallbackHandlerTest {
+import com.fasterxml.jackson.databind.ObjectMapper;
 
-    @MockBean
-    private ParentCaseUpdateHelper parentCaseUpdateHelper;
-    @MockBean
-    private Time time;
-    @Autowired
-    ObjectMapper objectMapper;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-    @Autowired
-    CaseDetailsConverter caseDetailsConverter;
+import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
+import uk.gov.hmcts.reform.civil.callback.CallbackParams;
+import uk.gov.hmcts.reform.civil.enums.YesOrNo;
+import uk.gov.hmcts.reform.civil.enums.dq.GAHearingDuration;
+import uk.gov.hmcts.reform.civil.enums.dq.GAHearingType;
+import uk.gov.hmcts.reform.civil.ga.enums.dq.GAJudgeDecisionOption;
+import uk.gov.hmcts.reform.civil.ga.handler.GeneralApplicationBaseCallbackHandlerTest;
+import uk.gov.hmcts.reform.civil.ga.model.GeneralApplicationCaseData;
+import uk.gov.hmcts.reform.civil.ga.model.genapplication.GAJudicialDecision;
+import uk.gov.hmcts.reform.civil.ga.service.GaForLipService;
+import uk.gov.hmcts.reform.civil.ga.service.ParentCaseUpdateHelper;
+import uk.gov.hmcts.reform.civil.ga.service.docmosis.GeneralApplicationDraftGenerator;
+import uk.gov.hmcts.reform.civil.model.Fee;
+import uk.gov.hmcts.reform.civil.model.GeneralAppParentCaseLink;
+import uk.gov.hmcts.reform.civil.model.common.DynamicList;
+import uk.gov.hmcts.reform.civil.model.common.DynamicListElement;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAApplicationType;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAHearingDetails;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAInformOtherParty;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAPbaDetails;
+import uk.gov.hmcts.reform.civil.model.genapplication.GARespondentOrderAgreement;
+import uk.gov.hmcts.reform.civil.model.genapplication.GASolicitorDetailsGAspec;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAStatementOfTruth;
+import uk.gov.hmcts.reform.civil.model.genapplication.GAUrgencyRequirement;
+import uk.gov.hmcts.reform.civil.model.genapplication.GeneralApplication;
+import uk.gov.hmcts.reform.civil.sampledata.GeneralApplicationCaseDataBuilder;
+import uk.gov.hmcts.reform.civil.sampledata.PDFBuilder;
+import uk.gov.hmcts.reform.civil.testutils.ObjectMapperFactory;
+import uk.gov.hmcts.reform.civil.utils.AssignCategoryId;
 
-    @MockBean
-    private GeneralApplicationDraftGenerator generalApplicationDraftGenerator;
-    @MockBean
-    private FeatureToggleService featureToggleService;
+import java.math.BigDecimal;
+import java.util.List;
+import java.util.UUID;
 
-    @MockBean
-    private GaForLipService gaForLipService;
-    @Autowired
-    private MoveToJudicialDecisionStateEventCallbackHandler handler;
+@ExtendWith(MockitoExtension.class)
+class MoveToJudicialDecisionStateEventCallbackHandlerTest
+        extends GeneralApplicationBaseCallbackHandlerTest {
+
+    @Spy private ObjectMapper objectMapper = ObjectMapperFactory.instance();
+    @Mock private ParentCaseUpdateHelper parentCaseUpdateHelper;
+    @Mock private AssignCategoryId assignCategoryId;
+    @Mock private GeneralApplicationDraftGenerator generalApplicationDraftGenerator;
+    @Mock private GaForLipService gaForLipService;
+    @InjectMocks private MoveToJudicialDecisionStateEventCallbackHandler handler;
+
     private static final String STRING_CONSTANT = "STRING_CONSTANT";
     private static final Long CHILD_CCD_REF = 1646003133062762L;
     private static final Long PARENT_CCD_REF = 1645779506193000L;
@@ -105,54 +88,60 @@ class MoveToJudicialDecisionStateEventCallbackHandlerTest extends GeneralApplica
             GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, NO, YES);
             CallbackParams params = callbackParamsOf(caseData, ABOUT_TO_SUBMIT);
             when(gaForLipService.isGaForLip(any())).thenReturn(false);
-            when(generalApplicationDraftGenerator.generate(any(GeneralApplicationCaseData.class), anyString()))
-                .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
+            when(generalApplicationDraftGenerator.generate(
+                            any(GeneralApplicationCaseData.class), anyString()))
+                    .thenReturn(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
-            verify(generalApplicationDraftGenerator).generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
-            GeneralApplicationCaseData updatedData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
+            verify(generalApplicationDraftGenerator)
+                    .generate(any(GeneralApplicationCaseData.class), eq("BEARER_TOKEN"));
+            GeneralApplicationCaseData updatedData =
+                    objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
 
             assertThat(response.getErrors()).isNull();
-            assertThat(updatedData.getGaDraftDocument().get(0).getValue())
-                .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
-            assertThat(response.getState()).isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
+            assertThat(updatedData.getGaDraftDocument().getFirst().getValue())
+                    .isEqualTo(PDFBuilder.APPLICATION_DRAFT_DOCUMENT);
+            assertThat(response.getState())
+                    .isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
         }
 
         @Test
         void shouldRespondWithStateChangedWithNoDocumentGeneration() {
             GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, NO, YES);
-            when(gaForLipService.isGaForLip(any())).thenReturn(false);
-            GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().judicialDecision(GAJudicialDecision.builder()
-                                                                                 .decision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
-                                                                                 .build()).build();
+            GeneralApplicationCaseData updatedCaseData =
+                    caseData.copy()
+                            .judicialDecision(
+                                    new GAJudicialDecision()
+                                            .setDecision(GAJudgeDecisionOption.REQUEST_MORE_INFO))
+                            .build();
             CallbackParams params = callbackParamsOf(updatedCaseData, ABOUT_TO_SUBMIT);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
-            GeneralApplicationCaseData updatedData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-
             assertThat(response.getErrors()).isNull();
             verifyNoInteractions(generalApplicationDraftGenerator);
-            assertThat(response.getState()).isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
+            assertThat(response.getState())
+                    .isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
         }
 
         @Test
         void shouldRespondWithStateChangedWithNoDocumentGenerationWhenLipCaseWithJudicial() {
             GeneralApplicationCaseData caseData = getSampleGeneralApplicationCaseData(YES, NO, YES);
-            when(gaForLipService.isGaForLip(any())).thenReturn(true);
-            GeneralApplicationCaseData updatedCaseData = caseData.toBuilder().judicialDecision(GAJudicialDecision.builder()
-                                                                                 .decision(GAJudgeDecisionOption.REQUEST_MORE_INFO)
-                                                                                 .build()).build();
+            GeneralApplicationCaseData updatedCaseData =
+                    caseData.copy()
+                            .judicialDecision(
+                                    new GAJudicialDecision()
+                                            .setDecision(GAJudgeDecisionOption.REQUEST_MORE_INFO))
+                            .build();
             CallbackParams params = callbackParamsOf(updatedCaseData, ABOUT_TO_SUBMIT);
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
-            GeneralApplicationCaseData updatedData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-
             assertThat(response.getErrors()).isNull();
             verifyNoInteractions(generalApplicationDraftGenerator);
-            assertThat(response.getState()).isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
+            assertThat(response.getState())
+                    .isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
         }
 
         @Test
@@ -163,62 +152,65 @@ class MoveToJudicialDecisionStateEventCallbackHandlerTest extends GeneralApplica
 
             var response = (AboutToStartOrSubmitCallbackResponse) handler.handle(params);
 
-            GeneralApplicationCaseData updatedData = objectMapper.convertValue(response.getData(), GeneralApplicationCaseData.class);
-
             assertThat(response.getErrors()).isNull();
             verifyNoInteractions(generalApplicationDraftGenerator);
-            assertThat(response.getState()).isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
+            assertThat(response.getState())
+                    .isEqualTo(APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.toString());
         }
     }
 
-    private GeneralApplicationCaseData getSampleGeneralApplicationCaseData(YesOrNo isConsented, YesOrNo isTobeNotified, YesOrNo isUrgent) {
-        return GeneralApplicationCaseDataBuilder.builder().buildCaseDateBaseOnGeneralApplication(
-                getGeneralApplication(isConsented, isTobeNotified, isUrgent))
-            .toBuilder()
-            .claimant1PartyName("Test Claimant1 Name")
-            .defendant1PartyName("Test Defendant1 Name")
-            .ccdCaseReference(CHILD_CCD_REF)
-            .build();
+    private GeneralApplicationCaseData getSampleGeneralApplicationCaseData(
+            YesOrNo isConsented, YesOrNo isTobeNotified, YesOrNo isUrgent) {
+        return GeneralApplicationCaseDataBuilder.builder()
+                .buildCaseDateBaseOnGeneralApplication(
+                        getGeneralApplication(isConsented, isTobeNotified, isUrgent))
+                .copy()
+                .claimant1PartyName("Test Claimant1 Name")
+                .defendant1PartyName("Test Defendant1 Name")
+                .ccdCaseReference(CHILD_CCD_REF)
+                .build();
     }
 
-    private GeneralApplication getGeneralApplication(YesOrNo isConsented, YesOrNo isTobeNotified,
-                                                     YesOrNo isUrgent) {
-        DynamicListElement location1 = DynamicListElement.builder()
-            .code(String.valueOf(UUID.randomUUID())).label("Site Name 2 - Address2 - 28000").build();
-        return GeneralApplication.builder()
-            .generalAppType(GAApplicationType.builder().types(List.of(RELIEF_FROM_SANCTIONS)).build())
-            .generalAppRespondentAgreement(GARespondentOrderAgreement.builder().hasAgreed(isConsented).build())
-            .generalAppInformOtherParty(GAInformOtherParty.builder().isWithNotice(isTobeNotified).build())
-            .generalAppPBADetails(
-                GAPbaDetails.builder()
-                    .fee(
-                        Fee.builder()
-                            .code("FE203")
-                            .calculatedAmountInPence(BigDecimal.valueOf(27500))
-                            .version("1")
-                            .build())
-                    .serviceReqReference(CUSTOMER_REFERENCE).build())
-            .generalAppDetailsOfOrder(STRING_CONSTANT)
-            .generalAppReasonsOfOrder(STRING_CONSTANT)
-            .generalAppUrgencyRequirement(GAUrgencyRequirement.builder().generalAppUrgency(isUrgent).build())
-            .generalAppStatementOfTruth(GAStatementOfTruth.builder().build())
-            .generalAppHearingDetails(GAHearingDetails.builder()
-                                          .hearingPreferredLocation(DynamicList.builder()
-                                                                        .listItems(List.of(location1))
-                                                                        .value(location1).build())
-                                          .vulnerabilityQuestionsYesOrNo(YES)
-                                          .vulnerabilityQuestion("dummy2")
-                                          .hearingPreferencesPreferredType(GAHearingType.IN_PERSON)
-                                          .hearingDuration(GAHearingDuration.MINUTES_30)
-                                          .hearingDetailsEmailID(DUMMY_EMAIL)
-                                          .hearingDetailsTelephoneNumber(DUMMY_TELEPHONE_NUM).build())
-            .generalAppRespondentSolicitors(wrapElements(GASolicitorDetailsGAspec.builder()
-                                                             .email("abc@gmail.com").build()))
-            .isMultiParty(NO)
-            .parentClaimantIsApplicant(YES)
-            .generalAppParentCaseLink(GeneralAppParentCaseLink.builder()
-                                          .caseReference(PARENT_CCD_REF.toString()).build())
-            .build();
+    private GeneralApplication getGeneralApplication(
+            YesOrNo isConsented, YesOrNo isTobeNotified, YesOrNo isUrgent) {
+        DynamicListElement location1 =
+                new DynamicListElement().setCode(String.valueOf(UUID.randomUUID())).setLabel("Site Name 2 - Address2 - 28000");
+        return new GeneralApplication()
+                .setGeneralAppType(new GAApplicationType().setTypes(List.of(RELIEF_FROM_SANCTIONS)))
+                .setGeneralAppRespondentAgreement(
+                        new GARespondentOrderAgreement().setHasAgreed(isConsented))
+                .setGeneralAppInformOtherParty(
+                        new GAInformOtherParty().setIsWithNotice(isTobeNotified))
+                .setGeneralAppPBADetails(
+                        new GAPbaDetails()
+                                .setFee(
+                                        new Fee()
+                                                .setCode("FE203")
+                                                .setCalculatedAmountInPence(
+                                                        BigDecimal.valueOf(27500))
+                                                .setVersion("1"))
+                                .setServiceReqReference(CUSTOMER_REFERENCE))
+                .setGeneralAppDetailsOfOrder(STRING_CONSTANT)
+                .setGeneralAppReasonsOfOrder(STRING_CONSTANT)
+                .setGeneralAppUrgencyRequirement(
+                        new GAUrgencyRequirement().setGeneralAppUrgency(isUrgent))
+                .setGeneralAppStatementOfTruth(new GAStatementOfTruth())
+                .setGeneralAppHearingDetails(
+                        new GAHearingDetails()
+                                .setHearingPreferredLocation(
+                                        new DynamicList().setListItems(List.of(location1)).setValue(location1))
+                                .setVulnerabilityQuestionsYesOrNo(YES)
+                                .setVulnerabilityQuestion("dummy2")
+                                .setHearingPreferencesPreferredType(GAHearingType.IN_PERSON)
+                                .setHearingDuration(GAHearingDuration.MINUTES_30)
+                                .setHearingDetailsEmailID(DUMMY_EMAIL)
+                                .setHearingDetailsTelephoneNumber(DUMMY_TELEPHONE_NUM))
+                .setGeneralAppRespondentSolicitors(
+                        wrapElements(new GASolicitorDetailsGAspec().setEmail("abc@gmail.com")))
+                .setIsMultiParty(NO)
+                .setParentClaimantIsApplicant(YES)
+                .setGeneralAppParentCaseLink(
+                        new GeneralAppParentCaseLink().setCaseReference(PARENT_CCD_REF.toString()));
     }
 
     @Nested
@@ -226,15 +218,16 @@ class MoveToJudicialDecisionStateEventCallbackHandlerTest extends GeneralApplica
 
         @Test
         void shouldDispatchBusinessProcess_whenStatusIsReady() {
-            GeneralApplicationCaseData caseData = GeneralApplicationCaseDataBuilder.builder().ccdCaseReference(1234L).build();
+            GeneralApplicationCaseData caseData =
+                    GeneralApplicationCaseDataBuilder.builder().ccdCaseReference(1234L).build();
             CallbackParams params = callbackParamsOf(caseData, SUBMITTED);
 
             handler.handle(params);
 
-            verify(parentCaseUpdateHelper, times(1)).updateParentWithGAState(
-                caseData,
-                APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.getDisplayedValue()
-            );
+            verify(parentCaseUpdateHelper, times(1))
+                    .updateParentWithGAState(
+                            caseData,
+                            APPLICATION_SUBMITTED_AWAITING_JUDICIAL_DECISION.getDisplayedValue());
         }
     }
 
